feat: update dependencies and enhance terminal handling